// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`_addSnippet 1`] = `
[
  [
    "snippets",
    [
      Snippet {
        "archived": false,
        "body": "foobar",
        "branch": "#foobar",
        "commit": undefined,
        "createdAt": 1577836800000,
        "ctime": 1577836800000,
        "gitUri": undefined,
        "id": "123457890",
        "mtime": 1577836800000,
        "origin": undefined,
        "size": 6,
        "storagePath": "/123457890/some name",
        "title": "some name",
        "type": "1",
        "workspaceId": null,
      },
      {
        "body": "bar",
        "id": "foo",
      },
    ],
  ],
]
`;

exports[`_addSnippet 2`] = `
[
  [
    {
      "snippets": [
        Snippet {
          "archived": false,
          "body": "foobar",
          "branch": "#foobar",
          "commit": undefined,
          "createdAt": 1577836800000,
          "ctime": 1577836800000,
          "gitUri": undefined,
          "id": "123457890",
          "mtime": 1577836800000,
          "origin": undefined,
          "size": 6,
          "storagePath": "/123457890/some name",
          "title": "some name",
          "type": "1",
          "workspaceId": null,
        },
        {
          "body": "bar",
          "id": "foo",
        },
      ],
    },
  ],
]
`;

exports[`_removeSnippet 1`] = `
[
  [
    "snippets",
    [
      {
        "id": "foo",
      },
      {
        "id": "loo",
      },
    ],
  ],
]
`;

exports[`_removeSnippet 2`] = `
[
  [
    {
      "snippets": [
        {
          "id": "foo",
        },
        {
          "id": "loo",
        },
      ],
    },
  ],
]
`;

exports[`_saveNewSnippet 1`] = `
[
  [
    "snippets",
    [
      {
        "bar": "foo",
        "path": "foobar",
      },
      {
        "foo": "bar",
      },
    ],
  ],
]
`;

exports[`_saveNewSnippet 2`] = `
[
  [
    {
      "snippets": [
        {
          "bar": "foo",
          "path": "foobar",
        },
        {
          "foo": "bar",
        },
      ],
    },
  ],
]
`;

exports[`_updateSnippet 1`] = `
[
  [
    "snippets",
    [
      {
        "body": "bar",
        "id": "foo",
      },
    ],
  ],
]
`;

exports[`_updateSnippet 2`] = `
[
  [
    {
      "snippets": [
        {
          "body": "bar",
          "id": "foo",
        },
      ],
    },
  ],
]
`;

exports[`activate 1`] = `
[
  "disposable",
  "defaultState",
  "defaultConfiguration",
  "setup",
]
`;
